# cpet-142-final-project

./: DOCUMENTATION.md  README.md  pyproject.toml
documentation/: CpET 142 - GROUP 6 - FINAL PROJECT DOCUMENTATION.docx  PROPOSAL.md
src/: core.py  main.py
src/example/: test.py  test.txt
