[project]
name = "cpet-142-final-project"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Group 6 - CpET 142 - Computer Programming 2", email = "25-33982@g.batstate-u.edu.ph" }
]
dependencies = [
    "flet>=0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
org = "Batangas State University - The National Engineering University - Lipa Campus"
product = "cpet-142-final-project"
company = "Group 6 - CpET 142 - Computer Programming 2"
copyright = "Copyright (C) 2023-2026 by Group 6 Batch 2025-2026, Batangas State University - The National Engineering University - Lipa Campus. All rights reserved."

[tool.flet.app]
path = "src"
